--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "pg": "^8.7.1"
@@ -24,6 +25,7 @@
     "@types/config": "^0.0.40",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.0",
